--- a/main.html
+++ b/main.html
@@ -41,7 +41,14 @@ Since 2020 has been a year full of hardships for everyone, Winter Mountain is th
 </p>
 
 <img src="Project 3.jpg" alt="Project 3" width="849" height="461">
+	
+<img src="Project 3-2.jpg" alt="Project 3-2" width="1280" height="633">
 
+<img src="Project 3-3.jpg" alt="Project 3-3" width="1019" height="720">
+	
+<img src="Project 3-4.jpg" alt="Project 3-4" width="1019" height="720">
+	
+<img src="Project 3-5.jpg" alt="Project 3-5" width="974" height="720">
 
 </body>
 </html>
